turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:10: error: value White is not a member of object java.awt.Color
  if (couleurSol == Color.White) {
                          ^LangtonsAnt:11: error: value Black is not a member of object java.awt.Color
    setCouleurSol(Color.Black)
                        ^LangtonsAnt:15: error: value White is not a member of object java.awt.Color
    setCouleurSol(Color.White)
                        ^