turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c: Color) {
  setCouleurBrosse(c)
  
  baisseBrosse()
  leveBrosse()
}

def step() {
  var couleurSol:Color = getCouleurSol()
  
  if (couleurSol == Color.White) {
    setCouleurSol(Color.Black)
    
    droite(); avance()
  } else {
    setCouleurSol(Color.White)
    
    gauche(); avance()
  }
}